fix button spacing

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -154,3 +154,7 @@ body {
     display: inline-block;
     transition: color 0.2s;
 }
+
+.button-text {
+    padding-top: 4px;
+}
