--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -105,6 +105,9 @@ $blueDark: #58A293;
     height: 50px;
     width: 137px;
     border: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     background-color: $background;
     color: $text;
     cursor: pointer;
